--- a/Software/devboard/Makefile
+++ b/Software/devboard/Makefile
@@ -50,6 +50,7 @@ SRC_FILES += \
   $(SDK_ROOT)/external/segger_rtt/SEGGER_RTT_Syscalls_GCC.c \
   $(SDK_ROOT)/external/segger_rtt/SEGGER_RTT_printf.c \
   $(SDK_ROOT)/modules/nrfx/mdk/system_nrf52840.c \
+  $(SDK_ROOT)/components/libraries/pwm/app_pwm.c \
 
 # Include folders common to all targets
 INC_FOLDERS += \
@@ -83,6 +84,7 @@ INC_FOLDERS += \
   $(SDK_ROOT)/modules/nrfx/drivers/include \
   $(SDK_ROOT)/external/fprintf \
   $(SDK_ROOT)/components/libraries/log/src \
+  $(SDK_ROOT)/components/libraries/pwm \
 
 # Libraries common to all targets
 LIB_FILES += \
